// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is after the GA4 auto-switch date 1`] = `
<div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          class="googlesitekit-settings-notice-ua-cutoff-warning googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
        >
          <div
            class="googlesitekit-settings-notice__icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-settings-notice__body"
          >
            <div
              class="googlesitekit-settings-notice__text"
            >
              <p
                class="googlesitekit-settings-notice-ua-cutoff-warning__notice"
              >
                No fresh data to display. Universal Analytics stopped collecting data on July 1. To resume collecting Analytics data, set up Google Analytics 4. 
                <a
                  aria-label="Learn more about Google Analytics 4 (opens in a new tab)"
                  class="googlesitekit-cta-link"
                  href="https://sitekit.withgoogle.com/support/?doc=ga4"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <span
                    class="googlesitekit-cta-link__contents"
                  >
                    Learn more
                  </span>
                  <span
                    class="googlesitekit-icon-wrapper"
                    style="margin-left: 5px;"
                  >
                    <svg />
                  </span>
                </a>
              </p>
            </div>
            <div
              class="googlesitekit-settings-notice__cta"
            >
              <button
                class="mdc-button mdc-button--raised mdc-button--danger"
                target="_self"
              >
                <span
                  class="mdc-button__label"
                >
                  Set up Google Analytics 4
                </span>
              </button>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is after the UA cutoff date 1`] = `
<div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          class="googlesitekit-settings-notice-ua-cutoff-warning googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
        >
          <div
            class="googlesitekit-settings-notice__icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-settings-notice__body"
          >
            <div
              class="googlesitekit-settings-notice__text"
            >
              <p
                class="googlesitekit-settings-notice-ua-cutoff-warning__notice"
              >
                Your data is stale because Universal Analytics stopped collecting data on July 1, 2023. 
                <a
                  aria-label="Learn more about Google Analytics 4 (opens in a new tab)"
                  class="googlesitekit-cta-link"
                  href="https://sitekit.withgoogle.com/support/?doc=ga4"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <span
                    class="googlesitekit-cta-link__contents"
                  >
                    Learn more
                  </span>
                  <span
                    class="googlesitekit-icon-wrapper"
                    style="margin-left: 5px;"
                  >
                    <svg />
                  </span>
                </a>
              </p>
            </div>
            <div
              class="googlesitekit-settings-notice__cta"
            >
              <button
                class="mdc-button mdc-button--raised mdc-button--danger"
                target="_self"
              >
                <span
                  class="mdc-button__label"
                >
                  Set up Google Analytics 4
                </span>
              </button>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is on the GA4 auto-switch date 1`] = `
<div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          class="googlesitekit-settings-notice-ua-cutoff-warning googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
        >
          <div
            class="googlesitekit-settings-notice__icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-settings-notice__body"
          >
            <div
              class="googlesitekit-settings-notice__text"
            >
              <p
                class="googlesitekit-settings-notice-ua-cutoff-warning__notice"
              >
                No fresh data to display. Universal Analytics stopped collecting data on July 1. To resume collecting Analytics data, set up Google Analytics 4. 
                <a
                  aria-label="Learn more about Google Analytics 4 (opens in a new tab)"
                  class="googlesitekit-cta-link"
                  href="https://sitekit.withgoogle.com/support/?doc=ga4"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <span
                    class="googlesitekit-cta-link__contents"
                  >
                    Learn more
                  </span>
                  <span
                    class="googlesitekit-icon-wrapper"
                    style="margin-left: 5px;"
                  >
                    <svg />
                  </span>
                </a>
              </p>
            </div>
            <div
              class="googlesitekit-settings-notice__cta"
            >
              <button
                class="mdc-button mdc-button--raised mdc-button--danger"
                target="_self"
              >
                <span
                  class="mdc-button__label"
                >
                  Set up Google Analytics 4
                </span>
              </button>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UACutoffWarning should render the UA cutoff warning notice when Analytics is connected while GA4 is not, and the date is on the UA cutoff date 1`] = `
<div>
  <div
    class="mdc-layout-grid"
  >
    <div
      class="mdc-layout-grid__inner"
    >
      <div
        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
      >
        <div
          class="googlesitekit-settings-notice-ua-cutoff-warning googlesitekit-settings-notice googlesitekit-settings-notice--warning googlesitekit-settings-notice--single-row"
        >
          <div
            class="googlesitekit-settings-notice__icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-settings-notice__body"
          >
            <div
              class="googlesitekit-settings-notice__text"
            >
              <p
                class="googlesitekit-settings-notice-ua-cutoff-warning__notice"
              >
                Your data is stale because Universal Analytics stopped collecting data on July 1, 2023. 
                <a
                  aria-label="Learn more about Google Analytics 4 (opens in a new tab)"
                  class="googlesitekit-cta-link"
                  href="https://sitekit.withgoogle.com/support/?doc=ga4"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <span
                    class="googlesitekit-cta-link__contents"
                  >
                    Learn more
                  </span>
                  <span
                    class="googlesitekit-icon-wrapper"
                    style="margin-left: 5px;"
                  >
                    <svg />
                  </span>
                </a>
              </p>
            </div>
            <div
              class="googlesitekit-settings-notice__cta"
            >
              <button
                class="mdc-button mdc-button--raised mdc-button--danger"
                target="_self"
              >
                <span
                  class="mdc-button__label"
                >
                  Set up Google Analytics 4
                </span>
              </button>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;
